work3/top10movies/top10movies-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: top10movies
spec:
  selector:
    matchLabels:
      app: top10movies
  template:
    metadata:
      labels:
        app: top10movies
    spec:
      containers:
      - name: top10movies-container
        image: partha00011/top10movies
        #        resources:
        #          limits:
        #            memory: "128Mi"
        #            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: top10movies-svc
spec:
  selector:
    app: top10movies
  ports:
  - port: 80
    targetPort: 80
