work3/top10movies/top10movies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top10movies-ingress
  labels:
    name: top10movies
spec:
  rules:
  - host: topmovies.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: top10movies-svc
            port: 
              number: 80
